--- a/android_app/app/src/main/res/layout/fragment_filling_checkboxes.xml
+++ b/android_app/app/src/main/res/layout/fragment_filling_checkboxes.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:scrollbars="vertical">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -13,7 +14,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="15dp"
-        android:gravity="center_horizontal"
+        android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,9 +23,16 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_container"
-            android:name="com.tns_energo_pnz.app.fragments.ReturningFragment"
             android:layout_width="match_parent"
-            android:layout_height="590dp" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:isScrollContainer="true" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/message_images"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +48,7 @@
                 android:text="@string/confirm" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/image_pick"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:contentDescription="@string/add_photography"
